--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Rest_HTTP</name>
+	<name>SF_Apps_REST_SOAP_Selenium_Services</name>
 	<comment></comment>
 	<projects>
 	</projects>
