--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,6 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
-			</plugin>
-			
-			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
@@ -51,7 +45,11 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-
+<dependency>
+    <groupId>com.force.api</groupId>
+    <artifactId>force-wsc</artifactId>
+    <version>46.1.0</version>
+</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
